# Family-CFO

./: .deploy.env.example  .dockerignore  .env.example  .gitignore  .gitmessage  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-api.yml  commit-message.yml  deploy-e2e.yml  ios.yml  security.yml  services.yml  spec-check.yml  web.yml
apps/: .env.example
apps/api/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
apps/api/src/family_cfo_api/: __init__.py  ai_catalog.py  ai_memory.py  ai_runtime_selection.py  ai_study.py  ai_tools.py  audit.py  backup_processing.py  banksync.py  bill_detection.py  chat_attachments.py  config.py  db.py  deps.py  embeddings.py  explanation.py  finance_service.py  fixtures.py  import_processing.py  income_detection.py  llm_explanation.py  logging.py  main.py  models.py  net_worth_history.py  ofx_parsing.py  ratelimit.py  report_generation.py  repository.py  rights.py  savings.py  schemas.py  security.py  smb_backup.py  undo_actions.py  vector_indexing.py  vector_store.py  worker_main.py  yearly_review.py
apps/api/src/family_cfo_api/api/: accounts.py  advisor.py  ai_runtime.py  audit_log.py  auth.py  backups.py  bills.py  budgets.py  categories.py  chat.py  connections.py  conversations.py  documents.py  goals.py  health.py  household.py  households.py  imports.py  income.py  income_analysis.py  invites.py  members.py  memories.py  pairing.py  reports.py  roles.py  routes.py  system_admins.py  transactions.py  voice.py
apps/api/src/family_cfo_api/tools/: __init__.py  openapi.py
apps/api/tests/: conftest.py  test_account_scan.py  test_advisor_api.py  test_advisor_feedback.py  test_ai_apply_api.py  test_ai_catalog_api.py  test_ai_runtime_api.py  test_ai_runtime_selection.py  test_ai_runtime_status.py  test_ai_study.py  test_ai_tools.py  test_audit_coverage.py  test_auth_api.py  test_backup_processing.py  test_backups_api.py  test_banksync.py  test_bill_scan.py  test_bill_suggestions.py  test_budgets.py  test_cash_outlook.py  test_categories.py  test_chat_agentic.py  test_chat_api.py  test_chat_attachments.py  test_chat_image.py  test_connections_api.py  test_conversations.py  test_db.py  test_documents_api.py  test_emergency_fund_designation.py  test_emergency_fund_target.py  test_explanation.py  test_finance_service.py  test_goals_api.py  test_health.py  test_household_api.py  test_household_lockout.py  test_household_overview.py  test_import_processing.py  test_imports_api.py  (+40 more)
apps/ios/: README.md
apps/web/: README.md  angular.json  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts
database/: README.md
database/migrations/: env.py
docker/: README.md  api.Dockerfile  entrypoint-api.sh  entrypoint-worker.sh  searxng-settings.yml  web-entrypoint.sh  web-nginx.conf  web.Dockerfile
docker/monitoring/: prometheus.yml
docs/: README.md  RELEASE-CHECKLIST.md
docs/adr/: 0001-specification-driven-monorepo.md  0002-fastapi-backend.md  0003-deterministic-financial-engine.md  0004-local-ai-runtime-abstraction.md  0005-openapi-source-of-truth.md  0006-docker-compose-home-server.md  0007-replaceable-component-interfaces.md  0008-security-hardening-decisions.md  0009-agentic-tool-calling.md  0010-security-hardening-and-deploy-tooling.md  0011-vision-image-routing.md  0012-model-selection-and-hardware-planning.md  0013-model-manager-sidecar.md  0014-live-data-tools.md  0015-bank-connections-and-dedupe.md  0016-household-memory.md  0017-vector-retrieval.md  0018-ios-voice-architecture.md  0019-bank-sync-cadence-and-rate-limits.md  0020-safe-to-spend-recurring-obligations.md  0021-activity-log-undo-framework.md  0022-edit-bills-inline.md  (+45 more)
scripts/: check-repo-hygiene.sh  deploy-ios-ota.sh  deploy-ios.sh  deploy.sh  deployments.sh  doctor.sh  e2e-deploy-test.sh  generate-swift-client.sh  patch.sh  release-testflight.sh  seed-demo.sh  setup-git-hooks.sh  setup-ssh.sh  swap-model.sh  validate-commit-message.sh
services/ai-orchestrator/: README.md  pyproject.toml
services/ai-orchestrator/src/family_cfo_ai_orchestrator/: __init__.py  guardrails.py  prompts.py  runtime.py  tool_calling.py  vision.py  vllm_adapter.py
services/ai-orchestrator/tests/: test_guardrails.py  test_prompts.py  test_tool_calling.py  test_vision.py  test_vllm_adapter.py
services/backup/: README.md  pyproject.toml
services/backup/src/family_cfo_backup/: __init__.py  adapter.py  archive.py  encryption.py
services/backup/tests/: test_adapter.py  test_archive.py  test_encryption.py
services/financial-engine/: README.md  pyproject.toml
services/financial-engine/src/family_cfo_financial_engine/: __init__.py  budget.py  cash_flow.py  debt_payoff.py  emergency_fund.py  future_value.py  goal_progress.py  money.py  net_worth.py  purchase_impact.py  results.py  retirement.py  safe_to_spend.py  tax_estimate.py
services/financial-engine/tests/: test_budget.py  test_cash_flow.py  test_debt_payoff.py  test_emergency_fund.py  test_future_value.py  test_goal_progress.py  test_money.py  test_net_worth.py  test_purchase_impact.py  test_retirement.py  test_safe_to_spend.py  test_tax_estimate.py
services/model-manager/: Dockerfile  README.md  pyproject.toml
services/model-manager/src/family_cfo_model_manager/: main.py
services/model-manager/tests/: test_manager.py
services/ocr-worker/: README.md  pyproject.toml
services/ocr-worker/src/family_cfo_ocr_worker/: __init__.py  adapter.py  deterministic_ocr_adapter.py  pdf_adapter.py  tesseract_ocr_adapter.py
services/ocr-worker/tests/: test_deterministic_ocr_adapter.py  test_pdf_adapter.py  test_tesseract_adapter.py
services/scheduler/: README.md  pyproject.toml
services/scheduler/src/family_cfo_scheduler/: __init__.py  retry.py  worker.py
services/scheduler/tests/: test_retry.py  test_worker.py
shared/: README.md
(+374 files in other folders)
