[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-api"
version = "0.1.0"
description = "FastAPI backend for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<1.19",
  "fastapi>=0.115,<0.116",
  "psycopg[binary]>=3.2,<3.4",
  "PyYAML>=6.0,<7",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.30,<0.51",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<0.28",
  "pytest>=8.0,<8.5",
  "ruff>=0.6,<1",
]

[project.scripts]
family-cfo-api = "family_cfo_api.main:main"
family-cfo-openapi = "family_cfo_api.tools.openapi:generate_openapi"
family-cfo-check-openapi = "family_cfo_api.tools.openapi:check_openapi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
