[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-api"
version = "0.1.0"
description = "FastAPI backend for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<1.19",
  # fastapi >=0.139 pulls starlette >=1.3.1, which clears the starlette
  # advisories flagged by pip-audit (PYSEC-2026-161/248/249/1941/1942,
  # CVE-2026-48817/48818).
  "fastapi>=0.139,<0.141",
  "psycopg[binary]>=3.2,<3.4",
  "python-multipart>=0.0.9,<0.1",
  "PyYAML>=6.0,<7",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.30,<0.51",
]

[project.optional-dependencies]
dev = [
  "fpdf2>=2.8,<3",
  "httpx>=0.27,<0.28",
  # pytest >=9.0.3 clears PYSEC-2026-1845.
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[project.scripts]
family-cfo-api = "family_cfo_api.main:main"
family-cfo-openapi = "family_cfo_api.tools.openapi:generate_openapi"
family-cfo-check-openapi = "family_cfo_api.tools.openapi:check_openapi"
family-cfo-worker = "family_cfo_api.worker_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
