[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-api"
version = "0.1.0"
description = "FastAPI backend for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<1.19",
  # fastapi >=0.139 pulls starlette >=1.3.1, which clears the starlette
  # advisories flagged by pip-audit (PYSEC-2026-161/248/249/1941/1942,
  # CVE-2026-48817/48818).
  "fastapi>=0.139,<0.141",
  # M69 (ADR 0017): local CPU embeddings for vector retrieval.
  "fastembed>=0.3,<1",
  "psycopg[binary]>=3.2,<3.4",
  # M77: rasterize PDF W2s on-box for the vision model (Pillow rides in via
  # fastembed and does the PNG encode).
  "pypdfium2>=4.30,<6",
  # M85: read .xlsx chat attachments into a bounded preview (MIT, pure-Python).
  "openpyxl>=3.1,<4",
  # Runtime HTTP client (vector store M69, bank sync, AI runtime probes, M87a
  # TTS proxy). Previously pulled in transitively; pinned explicitly now.
  "httpx>=0.27,<0.28",
  "python-multipart>=0.0.9,<0.1",
  "PyYAML>=6.0,<7",
  # M98: userspace SMB client so backups upload straight to a Synology share with
  # just the user's credentials — no host CIFS mount or container privileges.
  "smbprotocol>=1.12,<2",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.30,<0.51",
]

[project.optional-dependencies]
dev = [
  "fpdf2>=2.8,<3",
  "httpx>=0.27,<0.28",
  # pytest >=9.0.3 clears PYSEC-2026-1845.
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[project.scripts]
family-cfo-api = "family_cfo_api.main:main"
family-cfo-openapi = "family_cfo_api.tools.openapi:generate_openapi"
family-cfo-check-openapi = "family_cfo_api.tools.openapi:check_openapi"
family-cfo-worker = "family_cfo_api.worker_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
