[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-ai-orchestrator"
version = "0.1.0"
description = "Local AI runtime abstraction and guardrails for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
