[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-backup"
version = "0.1.0"
description = "Encrypted database/document backup adapters for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=42,<45",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<8.5",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
