[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-backup"
version = "0.1.0"
description = "Encrypted database/document backup adapters for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # cryptography >=48.0.1 clears PYSEC-2026-35, CVE-2026-26007, and
  # GHSA-537c-gmf6-5ccf flagged by pip-audit. This is the binding constraint
  # for the API image (which pulls cryptography via this package).
  "cryptography>=48.0.1,<50",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
