[project]
name = "family-cfo-model-manager"
version = "0.1.0"
description = "Privileged model-swap sidecar for Family CFO (ADR 0013)"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "httpx>=0.27", "ruff>=0.4,<0.16"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
