[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "family-cfo-ocr-worker"
version = "0.1.0"
description = "Document extraction adapters (PDF text and OCR) for Family CFO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pypdf>=5.0,<7",
]

[project.optional-dependencies]
dev = [
  "fpdf2>=2.8,<3",
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
